# ztifname

./: Cargo.toml  README.md  _rust-toolchain.toml  flake.nix  rustfmt.toml
.devcontainer/: devcontainer.json
src/: cli.rs  main.rs
src/lib/: freebsd.rs  linux.rs  mod.rs  nwid.rs
