[package]
name = "ztidtrans"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
clap = { version = "4", features = ["derive", "cargo"] }
eyre = "< 2"
color-eyre = "< 2"

[lib]
path = "src/lib/mod.rs"
