[package]
name = "ztifname"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "*"
clap = { version = "*", features = ["derive", "cargo"] }
eyre = "*"
color-eyre = "*"

[lib]
path = "src/lib/mod.rs"
